<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:minWidth="220dp"
            app:layout_constrainedWidth="true"
            android:background="@drawable/background_rounded_outlined"
            app:layout_constraintBottom_toTopOf="@id/date_start"
            app:layout_constraintLeft_toLeftOf="@id/left_guideline"
            app:layout_constraintRight_toRightOf="@id/right_guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:scrollHorizontally="false"
                android:text="@string/task_field_label"
                android:textSize="11sp"/>

            <TextView
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:scrollHorizontally="false"
                android:textSize="16sp"
                tools:text="Task" />
        </LinearLayout>

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:scrollHorizontally="false"
            android:textSize="12sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintEnd_toEndOf="@id/name"
            app:layout_constraintHorizontal_bias="0"
            tools:text="Active"/>

        <LinearLayout
            android:id="@+id/date_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_rounded_outlined"
            app:layout_constraintBottom_toTopOf="@id/date_end"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintEnd_toEndOf="@id/name"
            app:layout_constraintTop_toBottomOf="@id/name">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:scrollHorizontally="false"
                android:text="@string/date_start_label"
                android:textSize="11sp"/>

            <TextView
                android:id="@+id/date_start_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:scrollHorizontally="false"
                android:textSize="16sp"
                tools:text="02.06.2008"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/date_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:visibility="gone"
            android:background="@drawable/background_rounded_outlined"
            app:layout_constraintBottom_toTopOf="@id/time"
            app:layout_constraintStart_toStartOf="@id/date_start"
            app:layout_constraintEnd_toEndOf="@id/date_start"
            app:layout_constraintTop_toBottomOf="@id/date_start"
            tools:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:scrollHorizontally="false"
                android:text="@string/date_end_label"
                android:textSize="11sp"/>

            <TextView
                android:id="@+id/date_end_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:scrollHorizontally="false"
                android:textSize="16sp"
                tools:text="02.06.2008" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_rounded_outlined"
            app:layout_constraintBottom_toTopOf="@id/description"
            app:layout_constraintStart_toStartOf="@id/date_start"
            app:layout_constraintEnd_toEndOf="@id/date_start"
            app:layout_constraintTop_toBottomOf="@id/date_end">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:scrollHorizontally="false"
                android:text="@string/time_field_label"
                android:textSize="11sp"/>

            <TextView
                android:id="@+id/time_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:scrollHorizontally="false"
                android:textSize="16sp"
                tools:text="00:00 - 00:00" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/background_rounded_outlined"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/time"
            app:layout_constraintEnd_toEndOf="@id/time"
            app:layout_constraintTop_toBottomOf="@id/time">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:scrollHorizontally="false"
                android:text="@string/description_field_label"
                android:textSize="11sp"/>

            <TextView
                android:id="@+id/description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:scrollHorizontally="false"
                android:textSize="16sp"
                tools:text="Description" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

